Add content for home page.

--- a/home.html
+++ b/home.html
@@ -13,9 +13,9 @@
 
 <body>
 
-<div id="wholeModularPatternElements">
-  <div class="ModularPatternElements-header">
-    <nav class="ModularPatternElements-header_nav">
+<div id="wholeModularPatternElements" >
+  <div class="ModularPatternElements-header" >
+    <nav class="ModularPatternElements-header_nav" >
       <a id="Melody_logo"  href="home.html">Melody</a>
       
       <a   class="Melody_nav"  href="shop.html">Shop</a >
@@ -41,27 +41,93 @@
 
 
 <!-- main image begin-->
-<div class="main_img">
-	main image
-	
-</div>
+
+
+
+ <div class="home_imgPart">
+
+  <h2>Summer Sale <br> 20%</h2>
+
+  <a href="" class="img_button">SHOP NOW</a>
+ </div>
+
+
+
+
+
 
 <!-- main image end-->
 
 
 <!-- new arrive list begin-->
-<h3 class="newarrive_title">New Arrive</h3>
- <div class="grid_structure">
-  <div class="space1"> <a href="detail.html">  image1</a></div>
-  <div class="space2"><a href="detail.html">  image2</a></div>
-  <div class="space3"><a href="detail.html">  image3</a></div>
+
+
+  <h2 class="newarrive_title">New Arrive</h2>
+ <div class="newArrive_list">
+
+  <div class="newArrive_list1">
+    <div>
+    <a href="detail.html"> <img src="img/DoubleDiamondOpenRing.png" alt="this is Earrings_Rose."></a> 
+    </div>
+
+  </div>
+  <div class="newArrive_list2">
+    <div>
+     <a href=""> <img src="img/S-PearlSignetRing.png" alt="this is S-PearlSignetRing"></a>
+    </div>
+
+  </div>
+  <div class="newArrive_list3">
+    <div>
+     <a href=""><img src="img/FineBoxChain40cm.png" alt="this is FineBoxChain40cm"></a> 
+    </div>
+
+  </div>
  </div>
 
-  <div class="grid_structure">
-  <div class="space1"><a href="detail.html">  image4</a></div>
-  <div class="space2"><a href="detail.html">  image5</a></div>
-  <div class="space3"><a href="detail.html">  image6</a></div>
+
+
+ <div class="newArrive_list">
+
+  <div class="newArrive_list1">
+    <div>
+    <a href="">  <img src="img/Rope_Chain.png" alt="this is Rope Chain Bracelet in Silver."></a>
+    </div>
+
+  </div>
+  <div class="newArrive_list2">
+    <div>
+    <a href=""> <img src="img/Earrings_in_Silver.png" alt="this is Earrings in Silver"></a> 
+    </div>
+
+  </div>
+  <div class="newArrive_list3">
+    <div>
+     <a href=""> <img src="img/Double_Diamond.png" alt="this is Double Diamond Open Ring in Gold"></a>
+    </div>
+
+  </div>
  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
  <!-- new arrive list end-->
 
