--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="img">
-    
+
     <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="main.css">
@@ -17,7 +17,7 @@
   <div class="ModularPatternElements-header" >
     <nav class="ModularPatternElements-header_nav" >
       <a id="Melody_logo"  href="home.html">Melody</a>
-      
+
       <a   class="Melody_nav"  href="shop.html">Shop</a >
       <a class="Melody_nav" href="about.html">About</a >
       <a class="Melody_nav" href="contact.html">Contact</a >
@@ -67,19 +67,19 @@
 
   <div class="newArrive_list1">
     <div>
-    <a href="detail.html"> <img src="img/DoubleDiamondOpenRing.png" alt="this is Earrings_Rose."></a> 
+    <a href="detail.html"> <img src="img/DoubleDiamondOpenRing.png" alt="this is Earrings_Rose."></a>
     </div>
 
   </div>
   <div class="newArrive_list2">
     <div>
-     <a href=""> <img src="img/S-PearlSignetRing.png" alt="this is S-PearlSignetRing"></a>
+     <a href="detail2.html"> <img src="img/S-PearlSignetRing.png" alt="this is S-PearlSignetRing"></a>
     </div>
 
   </div>
   <div class="newArrive_list3">
     <div>
-     <a href=""><img src="img/FineBoxChain40cm.png" alt="this is FineBoxChain40cm"></a> 
+     <a href="detail.html"><img src="img/FineBoxChain40cm.png" alt="this is FineBoxChain40cm"></a>
     </div>
 
   </div>
@@ -91,19 +91,19 @@
 
   <div class="newArrive_list1">
     <div>
-    <a href="">  <img src="img/Rope_Chain.png" alt="this is Rope Chain Bracelet in Silver."></a>
+    <a href="detail2.html">  <img src="img/Rope_Chain.png" alt="this is Rope Chain Bracelet in Silver."></a>
     </div>
 
   </div>
   <div class="newArrive_list2">
     <div>
-    <a href=""> <img src="img/Earrings_in_Silver.png" alt="this is Earrings in Silver"></a> 
+    <a href="detail.html"> <img src="img/Earrings_in_Silver.png" alt="this is Earrings in Silver"></a>
     </div>
 
   </div>
   <div class="newArrive_list3">
     <div>
-     <a href=""> <img src="img/Double_Diamond.png" alt="this is Double Diamond Open Ring in Gold"></a>
+     <a href="detail2.html"> <img src="img/Double_Diamond.png" alt="this is Double Diamond Open Ring in Gold"></a>
     </div>
 
   </div>
@@ -136,9 +136,9 @@
 
   <div class="footer_part">
 
-  <h4>©Melody</h4>  
+  <h4>©Melody</h4>
   </div>
-  
+
 
 </footer>
 
