add image and description for about page.

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="img">
-    
+
     <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="main.css">
@@ -17,7 +17,7 @@
   <div class="ModularPatternElements-header">
     <nav class="ModularPatternElements-header_nav">
       <a id="Melody_logo"  href="home.html">Melody</a>
-      
+
       <a   class="Melody_nav"  href="shop.html">Shop</a >
       <a class="Melody_nav" href="about.html">About</a >
       <a class="Melody_nav" href="contact.html">Contact</a >
@@ -44,15 +44,28 @@
 
 
 
+ <h2 class="about_company"> Melody: Founder of Astrid & Miyu</h2>
 
 
  <div class="about_structure">
-  <div class="about_left">  
- description of the campany
+  <div class="about_left">
+ <!-- <img src="img/about_img.jpg"> -->
 
   </div>
-  <div class="about_right"> campany image</div>
- 
+  <div class="about_right">
+    <h2>Our Story</h2>
+        <p> <strong>Melody</strong>  started from humble beginnings. <strong>Melody</strong>  was founded by Connie Nam in 2012 when she noticed a gap in the market for affordable, good quality jewellery and so <strong>Melody</strong>  was born!</p>
+        <p>Connie began designing, manufacturing and marketing jewellery all from her little flat in Notting Hill. At the heart of everything was her passion to give women more jewellery choice and build a brand that guides and supports young people in their careers.  </p>
+        <p><strong>Melody</strong>  quickly built momentum in the jewellery industry, adorning fashion editors, celebrities and influencers all over London. Our dainty yet striking pieces have been worn by Georgia May Jagger, Pippa Middleton, Lydia Millen, Frankie Gaff, Chloé Lloyd, just to name a few.</p>
+        <p>We are now more than just a jewellery brand - we are a movement. Inspiring a community of people to celebrate and empower each other, express and honour your individuality and diversity and last but definitely not least, SPARKLE. </p>
+
+        <p>"I love working with everyone at <strong>Melody</strong> . I’m very lucky to have a team of genuine, collaborative, intelligent and creative people helping me grow the brand. Everyone in the team is an entrepreneur, with plenty of autonomy, responsibility and new challenges every day."</p>
+
+        <p>Best known for our signature ear stacks, our collections are inspired by our beloved city of London, from arts, architecture and music to Mother Nature and of course, all of our customers</p>
+        <p>All of our pieces are designed in our London studios by our dedicated design team. We also collaborate with young design talent based in London to bring beautiful and unique pieces to you.</p>
+
+  </div>
+
  </div>
 
 
@@ -66,9 +79,9 @@
 
   <div class="footer_part">
 
-  <h4>©Melody</h4>  
+  <h4>©Melody</h4>
   </div>
-  
+
 
 </footer>
 
