add img and modify the layout

--- a/contact.html
+++ b/contact.html
@@ -47,9 +47,7 @@
     <h4>+1(604)333-3131</h4>
     <h4>Email:xxxxxx@gmail.com</h4>
     <h4>Mon-Fri, 10am-6pm</h4>
-    <div class="contact_img">  
-      contact image 
-    </div>
+    <img class="contact_img" src="img/contact_img.png" alt="contact">
   </div>
 
   <div class="contact_form">
