add image citation

--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
       <a href=""><i class="fa fa-search" aria-hidden="true"></i></a>
   </div>
       <div>
-        <a href=""><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
+        <a href="cart.html"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
       </div>
       <div>
         <a href=""><i class="fa fa-heart-o" aria-hidden="true"></i></a>
@@ -47,6 +47,7 @@
     <h4>+1(604)333-3131</h4>
     <h4>Email:xxxxxx@gmail.com</h4>
     <h4>Mon-Fri, 10am-6pm</h4>
+    <!--https://www.ksldisplay.com/antique-luxury-jewelry-shop-decoration-idea-ksl-shop-fittings.html-->
     <img class="contact_img" src="img/contact_img.png" alt="contact">
   </div>
 
