link all the product to the detail page

--- a/shop.html
+++ b/shop.html
@@ -26,7 +26,7 @@
       <a href=""><i class="fa fa-search" aria-hidden="true"></i></a>
   </div>
       <div>
-        <a href=""><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
+        <a href="cart.html"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
       </div>
       <div>
         <a href=""><i class="fa fa-heart-o" aria-hidden="true"></i></a>
