connect to the cart page.

--- a/detail.html
+++ b/detail.html
@@ -98,7 +98,9 @@
     <p>Stone: Lab Grown Diamond; Size - 1mm / 1.5 mm</p>
     <!-- <p>Adjustable: Inner diameter: 16.92 mm</p> -->
     <h3>$121</h3>
-    <button  class="add_button"  type="button" >Add to Cart</button>
+    <!-- <button  class="add_button"  type="button" >  -->
+    	<a   class="button_link"  href="cart.html">  Add to Cart  </a> 
+    <!-- </button> -->
 
   </div>
 
