--- a/detail2.html
+++ b/detail2.html
@@ -98,7 +98,8 @@
     <p>Adjustable </p>
     <!-- <p>Adjustable: Inner diameter: 16.92 mm</p> -->
     <h3>$97</h3>
-    <button  class="add_button"  type="button" >Add to Cart</button>
+    <!-- <button  class="add_button"  type="button" >Add to Cart</button> -->
+      <a   class="button_link"  href="cart.html">  Add to Cart  </a> 
        
   </div>
  
