--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>P02 - Step 02 Check-in</title>
+	<title>P02: Company</title>
 	<meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="img">
@@ -9,12 +9,27 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="main.css">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+
+    <script>
+    setup = function() {
+        $(".phoneView_nav").click(function() { $("nav").slideToggle("slow"); })
+    }
+    $(document).ready(setup);
+    </script>
+
+
 </head>
 
 <body>
 
 <div id="wholeModularPatternElements" >
   <div class="ModularPatternElements-header" >
+
+            <div class="phoneView_nav"><a href="javascript:void(0)"><i class="fa fa-bars"></i></a></div>
+
     <nav class="ModularPatternElements-header_nav" >
       <a id="Melody_logo"  href="home.html">Melody</a>
 
@@ -27,7 +42,7 @@
       <a href=""><i class="fa fa-search" aria-hidden="true"></i></a>
   </div>
       <div>
-        <a href=""><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
+        <a href="cart.html"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
       </div>
       <div>
         <a href=""><i class="fa fa-heart-o" aria-hidden="true"></i></a>
@@ -48,7 +63,7 @@
 
   <h2>Summer Sale <br> 20%</h2>
 
-  <a href="" class="img_button">SHOP NOW</a>
+  <a href="shop.html" class="img_button">SHOP NOW</a>
  </div>
 
 
@@ -67,22 +82,29 @@
 
   <div class="newArrive_list1">
     <div>
-    <a href="detail.html"> <img src="img/DoubleDiamondOpenRing.png" alt="this is Earrings_Rose."></a>
-    </div>
+    <a href="detail.html"> <img class="newArrive_img" src="img/DoubleDiamondOpenRing.png" alt="this is Earrings_Rose."></a>
 
+       <div class="text"><a href="detail.html"><h4>Earrings in Rose Gold</h4></a>  </div>
+       <p class="price"><a  href="detail.html">$45</a></p>
+    </div>
   </div>
+
   <div class="newArrive_list2">
     <div>
-     <a href="detail2.html"> <img src="img/S-PearlSignetRing.png" alt="this is S-PearlSignetRing"></a>
+     <a href="detail2.html"> <img class="newArrive_img"  src="img/S-PearlSignetRing.png" alt="this is S-PearlSignetRing"></a>
+      <div class="text"><a href="detail2.html"><h4>Sweet Pearl Signet Ring</h4></a>  </div>
+      <p class="price"><a  href="detail2.html">$73</a></p>
     </div>
-
   </div>
+
   <div class="newArrive_list3">
     <div>
-     <a href="detail.html"><img src="img/FineBoxChain40cm.png" alt="this is FineBoxChain40cm"></a>
+     <a href="detail.html"><img  class="newArrive_img" src="img/FineBoxChain40cm.png" alt="this is FineBoxChain40cm"></a>
+       <div class="text"><a href="detail2.html"><h4>Fine Box Chain 40cm</h4></a>  </div>
+       <p class="price"><a  href="detail2.html">$115</a></p>
     </div>
-
   </div>
+
  </div>
 
 
@@ -91,22 +113,28 @@
 
   <div class="newArrive_list1">
     <div>
-    <a href="detail2.html">  <img src="img/Rope_Chain.png" alt="this is Rope Chain Bracelet in Silver."></a>
+      <a href="detail2.html">  <img class="newArrive_img"  src="img/Rope_Chain.png" alt="this is Rope Chain Bracelet in Silver."></a>
+      <div class="text"><a href="detail2.html"><h4>Rope Chain Bracelet in Silver</h4></a>  </div>
+      <p class="price"><a  href="detail2.html">$85</a></p>
     </div>
-
   </div>
+
   <div class="newArrive_list2">
     <div>
-    <a href="detail.html"> <img src="img/Earrings_in_Silver.png" alt="this is Earrings in Silver"></a>
+      <a href="detail.html"> <img   class="newArrive_img" src="img/Earrings_in_Silver.png" alt="this is Earrings in Silver"></a>
     </div>
-
+    <div class="text"><a href="detail2.html"><h4>Knot Stud Earrings in Silver</h4></a>  </div>
+    <p class="price"><a  href="detail2.html">$62</a></p>
   </div>
+
   <div class="newArrive_list3">
     <div>
-     <a href="detail2.html"> <img src="img/Double_Diamond.png" alt="this is Double Diamond Open Ring in Gold"></a>
+     <a href="detail2.html"> <img  class="newArrive_img" src="img/RopeChainNecklace.png" alt="this is Rope Chain Necklace"></a>
+     <div class="text"><a href="detail2.html"><h4>Rope Chain Necklace</h4></a>  </div>
+     <p class="price"><a  href="detail2.html">$105</a></p>
     </div>
-
   </div>
+
  </div>
 
 
