--- a/shop.html
+++ b/shop.html
@@ -1,21 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<title>P02 - Step 02 Check-in</title>
-	<meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="img">
-    
-    <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="main2.css">
-</head>
+  <head>
+    <title>P02: Company</title>
+    <meta charset="utf-8" />
+       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+       <link rel="stylesheet" type="text/css" href="img">
+   
+       <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
+       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+       <link rel="stylesheet" type="text/css" href="main.css">
+   
+       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+   
+   
+       <script>
+       setup = function() {
+           $(".phoneView_nav").click(function() { $("nav").slideToggle("slow"); })
+       }
+       $(document).ready(setup);
+       </script>
+   
+   
+   </head>
 
 <body>
 
 <div id="wholeModularPatternElements">
   <div class="ModularPatternElements-header">
     <nav class="ModularPatternElements-header_nav">
+      <div class="phoneView_nav"><a href=" "><i class="fa fa-bars"></i></a></div>
       <a id="Melody_logo"  href="home.html">Melody</a>
       <a class="Melody_nav"  href="shop.html">Shop</a >
       <a class="Melody_nav" href="about.html">About</a >
