--- a/detail.html
+++ b/detail.html
@@ -21,6 +21,10 @@
     </script>
 
 
+
+
+
+
 </head>
 
 
@@ -95,6 +99,7 @@
 <div class="detail_structure">
   <div class="detail_left">
 
+
   </div>
 
   <div class="detail_right">
@@ -112,12 +117,30 @@
     <p>Composition: 18k Gold plated Sterling Silver</p>
     <p>Stone: Lab Grown Diamond; Size - 1mm / 1.5 mm</p>
     <!-- <p>Adjustable: Inner diameter: 16.92 mm</p> -->
-    <h3>$121</h3>
-    <!-- <button  class="add_button"  type="button" >  -->
-    	<a   class="button_link"  href="cart.html">  Add to Cart  </a> 
-    <!-- </button> -->
+ 
+<div class="products-single-colors">
+
+        <a href="javascript:void(0)" onmouseover="changePics(1)"></a>
+        <a href="javascript:void(0)" onmouseover="changePics(2)"></a>
+        <a href="javascript:void(0)" onmouseover="changePics(3)"></a>
+      </div>
+
+<div class="priceAndNumber">
+    <h3>$121  </h3>
+
+    <h5>Only 9 Left</h5>
+</div>
+
+    
+<div>
+         <label class="qtyName" for="lname">Qty:</label>
+  <input   type="number" id="quantity" name="quantity" min="1" max="5" value="1">
+    	
 
   </div>
+
+  <a   class="button_link"  href="cart.html">  Add to Cart  </a> 
+  </div> 
 
  </div>
 
@@ -210,7 +233,11 @@
  <input type="text" id="comments" name="comments">
 
 
+
+
 </div>
+
+ <a href="#" class="comments_button">Submit</a>
 
   </div>
 
