--- a/detail2.html
+++ b/detail2.html
@@ -90,6 +90,11 @@
 
 
 
+
+
+
+
+
 <div class="detail_structure">
   <div class="detail2_left">  
 
@@ -109,12 +114,21 @@
     <h3>Details</h3>
     <p>Composition: Sterling silver; White cultured freshwater pearls</p>
     <p>Adjustable </p>
-    <!-- <p>Adjustable: Inner diameter: 16.92 mm</p> -->
-    <h3>$97</h3>
-    <!-- <button  class="add_button"  type="button" >Add to Cart</button> -->
+    <div class="priceAndNumber">
+      <h3>$97</h3>
+      <h5>Out of stock</h5>
+
+
+    </div>
+
+<div>
+            <label class="qtyName" for="lname">Qty:</label>
+  <input   type="number" id="quantity" name="quantity" min="1" max="5" value="1">
+  </div>    
       <a   class="button_link"  href="cart.html">  Add to Cart  </a> 
        
   </div>
+
  
  </div>
 
@@ -208,7 +222,7 @@
 
 
 </div>
-
+<a href="#" class="comments_button">Submit</a>
   </div>
 
 
