modify the code for shop page

--- a/shop.html
+++ b/shop.html
@@ -91,8 +91,8 @@
       <img class="list_img" src="img/RopeChainNecklace.png" alt="Rope Chain Necklace">
       </a>
     </div>
-      <div class="text"><a href="detail.html"><h4>Rope Chain Necklace</h4></a>  </div>
-    <p class="price"><a  href="detail.html">$105</a></p>
+      <div class="text"><a href="detail2.html"><h4>Rope Chain Necklace</h4></a>  </div>
+    <p class="price"><a  href="detail2.html">$105</a></p>
 
   </div>
   <div class="list3">
@@ -111,8 +111,8 @@
       <img  class="list_img" src="img/MysticDropGemHoops.png" alt="Mystic Drop Gem Hoop">
       </a>
     </div>
-    <div class="text"><a href="detail.html"><h4>Mystic Drop Gem Hoop</h4></a>  </div>
-    <p class="price"><a  href="detail.html">$125</a></p>
+    <div class="text"><a href="detail2.html"><h4>Mystic Drop Gem Hoop</h4></a>  </div>
+    <p class="price"><a  href="detail2.html">$125</a></p>
   </div>
  </div>
 
@@ -124,8 +124,8 @@
       <img class="list_img"  src="img/FineBoxChain40cm.png" alt="Fine Box Chain 40cm">
       </a>
     </div>
-    <div class="text"><a href="detail2.html"><h4>Fine Box Chain 40cm</h4></a>  </div>
-    <p class="price"><a  href="detail2.html">$115</a></p>
+    <div class="text"><a href="detail.html"><h4>Fine Box Chain 40cm</h4></a>  </div>
+    <p class="price"><a  href="detail.html">$115</a></p>
   </div>
 
   <div class="list2">
@@ -145,8 +145,8 @@
       </a>
     </div>
     
-    <div class="text"><a href="detail2.html"><h4>Sweet Pearl Signet Ring</h4></a>  </div>
-    <p class="price"><a  href="detail2.html">$73</a></p>
+    <div class="text"><a href="detail.html"><h4>Sweet Pearl Signet Ring</h4></a>  </div>
+    <p class="price"><a  href="detail.html">$73</a></p>
   </div>
 
 
