modify the layout for contact page

--- a/contact.html
+++ b/contact.html
@@ -52,35 +52,53 @@
   </div>
 </div>
 
-<div class="contact">
-  <div class="address">
+
+
+
+
+<div class="about_page">
+  <div class="about_right">
+
     <h2>Contact</h2>
+
     <h4>Vancouver</h4>
     <h4>Canada</h4>
     <h4>+1(604)333-3131</h4>
-    <h4>Email:xxxxxx@gmail.com</h4>
+    <h4>Email: Melody@gmail.com</h4>
     <h4>Mon-Fri, 10am-6pm</h4>
-    <!--https://www.ksldisplay.com/antique-luxury-jewelry-shop-decoration-idea-ksl-shop-fittings.html-->
-    <img class="contact_img" src="img/contact_img.png" alt="contact">
+    <div>
+<img class="contact_img" src="img/contact_img.png" alt="contact">    </div>
+
+
   </div>
+  <div class="about_left">
+
 
   <div class="contact_form">
-    <h3>Name</h3>
+    <h2>Get in touch.</h2>
+    <p>Please send us your inquiry and we will reply within 1-3 business days. </p>
+    <p>Name*</p>
     <label for="nameInput"></label>
     <input type="text" id="nameInput" name="nameInput">
-    <h3>Email</h3>
+    <p>Email*</p>
     <label for="emailInput"></label>
     <input type="text" id="emailInput" name="emailInput">
-    <h3>Message</h3>
+      <p>Subject*</p>
+    <label for="subjectInput"></label>
+    <input type="text" id="subjectInput" name="subjectInput">
+    <p>Message*</p>
     <label for="msgInput"></label>
     <input type="text" id="msgInput" name="msgInput">
     <div class="button">
-    <button class="submit_button"  type="button" >
-      Submit
-    </button>
+      <a href="#" class="comments_button_about">Submit</a>
+      
+ 
     </div>
   </div>
-</div>
+  </div>
+  
+
+ </div>
 
 
 <!-- this is footer start-->
