--- a/shop.html
+++ b/shop.html
@@ -10,15 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="main2.css">
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-
-    <script>
-    setup = function() {
-        $(".phoneView_nav").click(function() { $("nav").slideToggle("slow"); })
-    }
-    $(document).ready(setup);
-    </script>
 
 
 </head>
@@ -29,7 +21,7 @@
 <div id="wholeModularPatternElements" >
   <div class="ModularPatternElements-header" >
 
-            <div class="phoneView_nav"><a href="javascript:void(0)"><i class="fa fa-bars"></i></a></div>
+           <div class="phoneView_nav"><a ><i class="fa fa-bars"></i></a></div>
 
     <nav class="ModularPatternElements-header_nav" >
       <a id="Melody_logo"  href="home.html">Melody</a>
@@ -87,7 +79,7 @@
 
   <div class="list2">
     <div>
-      <a href="detail.html">
+      <a href="detail2.html">
       <img class="list_img" src="img/RopeChainNecklace.png" alt="Rope Chain Necklace">
       </a>
     </div>
@@ -107,7 +99,7 @@
 
   <div class="list4">
     <div>
-      <a href="detail.html">
+      <a href="detail2.html">
       <img  class="list_img" src="img/MysticDropGemHoops.png" alt="Mystic Drop Gem Hoop">
       </a>
     </div>
@@ -120,7 +112,7 @@
  <div class="product_list">
   <div class="list1">
     <div>
-      <a href="detail2.html">
+      <a href="detail.html">
       <img class="list_img"  src="img/FineBoxChain40cm.png" alt="Fine Box Chain 40cm">
       </a>
     </div>
@@ -140,7 +132,7 @@
 
   <div class="list3">
     <div>
-      <a  href="detail2.html">
+      <a  href="detail.html">
       <img class="list_img" src="img/S-PearlSignetRing.png" alt="2.0 Large Signet Ring">
       </a>
     </div>
