--- a/about.html
+++ b/about.html
@@ -11,15 +11,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="main.css">
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
-
-    <script>
-    setup = function() {
-        $(".phoneView_nav").click(function() { $("nav").slideToggle("slow"); })
-    }
-    $(document).ready(setup);
-    </script>
 
 
 </head>
@@ -30,7 +21,7 @@
 <div id="wholeModularPatternElements">
   <div class="ModularPatternElements-header">
     
-            <div class="phoneView_nav"><a href="javascript:void(0)"><i class="fa fa-bars"></i></a></div>
+            <div class="phoneView_nav"><a ><i class="fa fa-bars"></i></a></div>
 
 
     <nav class="ModularPatternElements-header_nav">
@@ -42,13 +33,13 @@
     </nav>
   <div class="ModularPatternElements-header_icon">
   <div>
-      <a href=""><i class="fa fa-search" aria-hidden="true"></i></a>
+      <a href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
   </div>
       <div>
-        <a href=""><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
+        <a href="cart.html"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
       </div>
       <div>
-        <a href=""><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+        <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
       </div>
       <div>
         <a href="#"><i class="fa fa-user-o" aria-hidden="true"></i></a >
