--- a/contact.html
+++ b/contact.html
@@ -10,16 +10,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="main2.css">
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
-
-    <script>
-    setup = function() {
-        $(".phoneView_nav").click(function() { $("nav").slideToggle("slow"); })
-    }
-    $(document).ready(setup);
-    </script>
-
 
 </head>
 
@@ -27,7 +17,7 @@
 
 <div id="wholeModularPatternElements">
   <div class="ModularPatternElements-header">
-     <div class="phoneView_nav"><a href="javascript:void(0)"><i class="fa fa-bars"></i></a></div>
+     <div class="phoneView_nav"><a ><i class="fa fa-bars"></i></a></div>
     <nav class="ModularPatternElements-header_nav">
       <a id="Melody_logo"  href="home.html">Melody</a>
       
@@ -59,7 +49,7 @@
 <div class="about_page">
   <div class="about_right">
 
-    <h2>Contact</h2>
+    <h2 class="about_contact">Contact</h2>
 
     <h4>Vancouver</h4>
     <h4>Canada</h4>
