--- a/detail.html
+++ b/detail.html
@@ -10,19 +10,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="main.css">
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
-
-    <script>
-    setup = function() {
-        $(".phoneView_nav").click(function() { $("nav").slideToggle("slow"); })
-    }
-    $(document).ready(setup);
-    </script>
-
-
-
-
 
 
 </head>
@@ -33,7 +20,7 @@
 <div id="wholeModularPatternElements">
   <div class="ModularPatternElements-header">
 
-            <div class="phoneView_nav"><a href="javascript:void(0)"><i class="fa fa-bars"></i></a></div>
+            <div class="phoneView_nav"><a ><i class="fa fa-bars"></i></a></div>
     <nav class="ModularPatternElements-header_nav">
       <a id="Melody_logo"  href="home.html">Melody</a>
 
@@ -133,7 +120,7 @@
 
     
 <div>
-         <label class="qtyName" for="lname">Qty:</label>
+         <label id="qtyName" >Qty:</label>
   <input   type="number" id="quantity" name="quantity" min="1" max="5" value="1">
     	
 
