--- a/detail2.html
+++ b/detail2.html
@@ -10,15 +10,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="main.css">
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
-
-    <script>
-    setup = function() {
-        $(".phoneView_nav").click(function() { $("nav").slideToggle("slow"); })
-    }
-    $(document).ready(setup);
-    </script>
 
 
 </head>
@@ -27,7 +18,7 @@
 
 <div id="wholeModularPatternElements">
   <div class="ModularPatternElements-header">
-    <div class="phoneView_nav"><a href="javascript:void(0)"><i class="fa fa-bars"></i></a></div>
+    <div class="phoneView_nav"><a ><i class="fa fa-bars"></i></a></div>
     <nav class="ModularPatternElements-header_nav">
       <a id="Melody_logo"  href="home.html">Melody</a>
       
@@ -122,7 +113,7 @@
     </div>
 
 <div>
-            <label class="qtyName" for="lname">Qty:</label>
+            <label id="qtyName" >Qty:</label>
   <input   type="number" id="quantity" name="quantity" min="1" max="5" value="1">
   </div>    
       <a   class="button_link"  href="cart.html">  Add to Cart  </a> 
