add links in each footer

--- a/detail.html
+++ b/detail.html
@@ -247,10 +247,29 @@
 <footer>
 
   <div class="footer_part">
+    <div class="footer_part_right">
+      <div class="footer_link">
+      <a href="https://github.com/WeiZhao0327/P02---Step-01-Check-in.git">GitHub for P02 - Step 01</a>
+  
 
-  <h4>©Melody</h4>
+      <a href="https://github.com/WeiZhao0327/P02-Company.git">GitHub for P02 - Step-02 to P02: Company </a>
+      </div>
+      <div class="footer_link">
+      <a href="https://fonts.google.com/specimen/Nunito?sidebar.open&selection.family=Nunito">Font Family</a>
+  
+  
+      <a href=" https://www.astridandmiyu.com/"> Content Information</a>
+
+      <a href=" https://fontawesome.com/v4.7.0/"> Icon</a>
+
+      </div>
+  </div>
+  <div class="footer_part_left">
+
+      <div>©Melody</div>
   </div>
 
+</div>
 
 </footer>
 
