--- a/checkOut.html
+++ b/checkOut.html
@@ -24,7 +24,7 @@
       <a class="Melody_nav" href="about.html">About</a >
       <a class="Melody_nav" href="contact.html">Contact</a >
     </nav>
-  <div class="ModularPatternElements-header_icon">
+  <div class="ModularPatternElements-header_icon icon_part_nav">
   <div>
       <a href=""><i class="fa fa-search" aria-hidden="true"></i></a>
   </div>
@@ -37,6 +37,8 @@
       <div>
         <a href="#"><i class="fa fa-user-o" aria-hidden="true"></i></a >
       </div>
+            <!-- icon reference: https://fontawesome.com/v4.7.0/ -->
+
     </div>
   </div>
 </div>
@@ -89,6 +91,8 @@
       </tr>
       
     </table>
+        <!-- table reference: https://www.w3schools.com/tags/tag_table.asp -->
+
       <HR class="line"  > 
       <div class="subtotal_part">
         <div>
@@ -187,8 +191,8 @@
 
 
 
-     <div class="button">
-      <a href="complete.html" class="order_button">Place your order</a>
+     <div class="button check_button">
+      <a href="complete.html" class="check_out_button">Place your order</a>
       
     </div>
 
@@ -216,25 +220,35 @@
   
 
       <a href="https://github.com/WeiZhao0327/P02-Company.git">GitHub for P02 - Step-02 to P02: Company </a>
-      </div>
-      <div class="footer_link">
-      <a href="https://fonts.google.com/specimen/Nunito?sidebar.open&selection.family=Nunito">Font Family</a>
-  
-  
-      <a href=" https://www.astridandmiyu.com/"> Content Information</a>
 
-      <a href=" https://fontawesome.com/v4.7.0/"> Icon</a>
+      <a href=" https://www.astridandmiyu.com/"> Images and Content Information for Websites</a>
 
+  
       </div>
+ 
   </div>
-  <div class="footer_part_left">
+
+    <div class="footer_part_middle">
 
       <div>©Melody</div>
+  </div>
+
+
+  <div class="footer_part_left">
+
+     <div class="footer_link">
+        <a href=" https://fontawesome.com/v4.7.0/"> Icon</a>
+          <a href="https://www.sfu.ca/~wza65/IAT339/P02%20-%20Step%2001%20Check-in/style_guide.html">Style Guide</a>
+      <a href="https://fonts.google.com/specimen/Nunito?sidebar.open&selection.family=Nunito">Font Family</a>
+
+
+      </div>
   </div>
 
 </div>
 
 </footer>
+
   
   <!--footer end-->
   
