--- a/detail.html
+++ b/detail.html
@@ -28,12 +28,12 @@
       <a class="Melody_nav" href="about.html">About</a >
       <a class="Melody_nav" href="contact.html">Contact</a >
     </nav>
-  <div class="ModularPatternElements-header_icon">
+  <div class="ModularPatternElements-header_icon icon_part_nav">
   <div>
       <a href=""><i class="fa fa-search" aria-hidden="true"></i></a>
   </div>
       <div>
-        <a href=""><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
+        <a href="cart.html"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
       </div>
       <div>
         <a href=""><i class="fa fa-heart-o" aria-hidden="true"></i></a>
@@ -41,44 +41,12 @@
       <div>
         <a href="#"><i class="fa fa-user-o" aria-hidden="true"></i></a >
       </div>
+                  <!-- icon reference: https://fontawesome.com/v4.7.0/ -->
+
     </div>
   </div>
 </div>
 
-<!-- prodect detail start -->
-
-
-
- <!--  <div class="product_detail">
-  <div class="space1">image4</div>
-  <div class="space2">prodect img </div>
- </div>
- -->
-
-
-
-
-<!-- <div class="Product_Review_form">
-  <div class="detail_project">
-    <h2>Mystic Simple Huggies</h2>
-    <h3>Description</h3>
-    <p>The everyday earring essential that every girl needs. The Mystic Dreams simple huggies are made from sterling silver so you literally will never want to take them out. The tiny earrings hug tightly around the earlobes, perfect if you want to stack with more huggies, studs or ear cuffs.</p>
-
-
-    <h3 class="detail_price"> 145 CAD</h3>
-    <button  class="add_button"  type="button" >Add to Cart</button>
-
-  </div>
-
-
-  <div class="img_product">
-
-
-
-  </div>
-
-
- </div> -->
 
 
 
@@ -103,8 +71,7 @@
     <h3>Details</h3>
     <p>Composition: 18k Gold plated Sterling Silver</p>
     <p>Stone: Lab Grown Diamond; Size - 1mm / 1.5 mm</p>
-    <!-- <p>Adjustable: Inner diameter: 16.92 mm</p> -->
- 
+    
 <div class="products-single-colors">
 
         <a href="javascript:void(0)" onmouseover="changePics(1)"></a>
@@ -135,17 +102,7 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
+<!-- prodect detail start -->
 
 
 
@@ -218,25 +175,16 @@
 
 
  <input type="text" id="comments" name="comments">
+ <!-- https://www.w3schools.com/html/html_form_input_types.asp -->
+
 
 
 
 
 </div>
 
- <a href="#" class="comments_button">Submit</a>
-
+<a href="#" class=" detail_comments_button">Submit</a>
   </div>
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -253,20 +201,29 @@
   
 
       <a href="https://github.com/WeiZhao0327/P02-Company.git">GitHub for P02 - Step-02 to P02: Company </a>
-      </div>
-      <div class="footer_link">
-      <a href="https://fonts.google.com/specimen/Nunito?sidebar.open&selection.family=Nunito">Font Family</a>
-  
-  
-      <a href=" https://www.astridandmiyu.com/"> Content Information</a>
 
-      <a href=" https://fontawesome.com/v4.7.0/"> Icon</a>
+      <a href=" https://www.astridandmiyu.com/"> Images and Content Information for Websites</a>
 
+  
       </div>
+ 
   </div>
-  <div class="footer_part_left">
+
+    <div class="footer_part_middle">
 
       <div>©Melody</div>
+  </div>
+
+
+  <div class="footer_part_left">
+
+     <div class="footer_link">
+        <a href=" https://fontawesome.com/v4.7.0/"> Icon</a>
+          <a href="https://www.sfu.ca/~wza65/IAT339/P02%20-%20Step%2001%20Check-in/style_guide.html">Style Guide</a>
+      <a href="https://fonts.google.com/specimen/Nunito?sidebar.open&selection.family=Nunito">Font Family</a>
+
+
+      </div>
   </div>
 
 </div>
