--- a/detail2.html
+++ b/detail2.html
@@ -26,12 +26,12 @@
       <a class="Melody_nav" href="about.html">About</a >
       <a class="Melody_nav" href="contact.html">Contact</a >
     </nav>
-  <div class="ModularPatternElements-header_icon">
+  <div class="ModularPatternElements-header_icon icon_part_nav">
   <div>
       <a href=""><i class="fa fa-search" aria-hidden="true"></i></a>
   </div>
       <div>
-        <a href=""><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
+        <a href="cart.html"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
       </div>
       <div>
         <a href=""><i class="fa fa-heart-o" aria-hidden="true"></i></a>
@@ -43,49 +43,8 @@
   </div>
 </div>
 
-<!-- prodect detail start -->
 
-
-
- <!--  <div class="product_detail">
-  <div class="space1">image4</div>
-  <div class="space2">prodect img </div> 
- </div>
- -->
-
-
-
-
-<!-- <div class="Product_Review_form">
-  <div class="detail_project">
-    <h2>Mystic Simple Huggies</h2>
-    <h3>Description</h3>
-    <p>The everyday earring essential that every girl needs. The Mystic Dreams simple huggies are made from sterling silver so you literally will never want to take them out. The tiny earrings hug tightly around the earlobes, perfect if you want to stack with more huggies, studs or ear cuffs.</p>
-
-
-    <h3 class="detail_price"> 145 CAD</h3>
-    <button  class="add_button"  type="button" >Add to Cart</button>
-
-  </div>
-
-
-  <div class="img_product">
-
-
-
-  </div>
-
-
- </div> -->
-
-
-
-
-
-
-
-
-
+<!-- product detail start -->
 <div class="detail_structure">
   <div class="detail2_left">  
 
@@ -122,22 +81,6 @@
 
  
  </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -210,26 +153,18 @@
 
 
  <input type="text" id="comments" name="comments">
-
+<!-- https://www.w3schools.com/html/html_form_input_types.asp -->
 
 </div>
-<a href="#" class="comments_button">Submit</a>
+
+<a href="#" class=" detail_comments_button">Submit</a>
   </div>
 
 
 
 
-
-
-
-
-
-
-
-
-
-
 <!-- prodect detail end -->
+
 
 <!-- this is footer start-->
 <footer>
@@ -241,26 +176,34 @@
   
 
       <a href="https://github.com/WeiZhao0327/P02-Company.git">GitHub for P02 - Step-02 to P02: Company </a>
-      </div>
-      <div class="footer_link">
-      <a href="https://fonts.google.com/specimen/Nunito?sidebar.open&selection.family=Nunito">Font Family</a>
-  
-  
-      <a href=" https://www.astridandmiyu.com/"> Content Information</a>
 
-      <a href=" https://fontawesome.com/v4.7.0/"> Icon</a>
+      <a href=" https://www.astridandmiyu.com/"> Images and Content Information for Websites</a>
 
+  
       </div>
+ 
   </div>
-  <div class="footer_part_left">
+
+    <div class="footer_part_middle">
 
       <div>©Melody</div>
+  </div>
+
+
+  <div class="footer_part_left">
+
+     <div class="footer_link">
+        <a href=" https://fontawesome.com/v4.7.0/"> Icon</a>
+          <a href="https://www.sfu.ca/~wza65/IAT339/P02%20-%20Step%2001%20Check-in/style_guide.html">Style Guide</a>
+      <a href="https://fonts.google.com/specimen/Nunito?sidebar.open&selection.family=Nunito">Font Family</a>
+
+
+      </div>
   </div>
 
 </div>
 
 </footer>
-
 <!--footer end-->
 
 
