--- a/home.html
+++ b/home.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" type="text/css" href="main.css">
 
 
-
 </head>
 
 <body>
@@ -28,7 +27,7 @@
       <a class="Melody_nav " href="about.html">About</a >
       <a class="Melody_nav" href="contact.html">Contact</a >
     </nav>
-  <div class="ModularPatternElements-header_icon">
+  <div class="ModularPatternElements-header_icon icon_part_nav">
   <div>
       <a href=""><i class="fa fa-search" aria-hidden="true"></i></a>
   </div>
@@ -41,6 +40,7 @@
       <div>
         <a href="#"><i class="fa fa-user-o" aria-hidden="true"></i></a >
       </div>
+      <!-- icon reference: https://fontawesome.com/v4.7.0/ -->
     </div>
   </div>
 </div>
@@ -52,14 +52,12 @@
 
  <div class="home_imgPart">
 
-  <h2>Summer Sale <br> 20%</h2>
+  <h2>Summer Sale </h2> 
+  <h2 class="home_img_h2">20%</h2>
 
   <a href="shop.html" class="img_button">SHOP NOW</a>
 
  </div>
-
-
-
 
 
 
@@ -70,7 +68,7 @@
 
 
   <h2 class="newarrive_title">New Arrive</h2>
- <div class="newArrive_list">
+  <div class="newArrive_list">
 
   <div class="newArrive_list1">
     <div>
@@ -129,12 +127,8 @@
 
  </div>
 
-
-
-
-
-
  <!-- new arrive list end-->
+
 
 <!-- this is footer start-->
 <footer>
@@ -146,20 +140,29 @@
   
 
       <a href="https://github.com/WeiZhao0327/P02-Company.git">GitHub for P02 - Step-02 to P02: Company </a>
-      </div>
-      <div class="footer_link">
-      <a href="https://fonts.google.com/specimen/Nunito?sidebar.open&selection.family=Nunito">Font Family</a>
-  
-  
-      <a href=" https://www.astridandmiyu.com/"> Content Information</a>
 
-      <a href=" https://fontawesome.com/v4.7.0/"> Icon</a>
+      <a href=" https://www.astridandmiyu.com/"> Images and Content Information for Websites</a>
 
+  
       </div>
+ 
   </div>
-  <div class="footer_part_left">
+
+    <div class="footer_part_middle">
 
       <div>©Melody</div>
+  </div>
+
+
+  <div class="footer_part_left">
+
+     <div class="footer_link">
+        <a href=" https://fontawesome.com/v4.7.0/"> Icon</a>
+          <a href="https://www.sfu.ca/~wza65/IAT339/P02%20-%20Step%2001%20Check-in/style_guide.html">Style Guide</a>
+      <a href="https://fonts.google.com/specimen/Nunito?sidebar.open&selection.family=Nunito">Font Family</a>
+
+
+      </div>
   </div>
 
 </div>
